manifests/99-apps/media/prowlarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
      - name: prowlarr
        image: lscr.io/linuxserver/prowlarr:develop
        ports:
        - containerPort: 9696
          name: http
        volumeMounts:
        - name: media-volume
          mountPath: /data
      volumes:
      - name: media-volume
        persistentVolumeClaim:
          claimName: media-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
spec:
  ports:
  - port: 9696
    targetPort: 9696
  selector:
    app: prowlarr
