manifests/99-apps/media/sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: lscr.io/linuxserver/sonarr:latest
        ports:
        - containerPort: 8989
          name: http
        volumeMounts:
        - name: media-volume
          mountPath: /data
      volumes:
      - name: media-volume
        persistentVolumeClaim:
          claimName: media-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  ports:
  - port: 8989
    targetPort: 8989
  selector:
    app: sonarr
