manifests/99-apps/media/media-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-ingress
  namespace: media 
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls: 
  - hosts:
      - radarr.charana.dev
      - prowlarr.charana.dev
      - torrent.charana.dev
      - sonarr.charana.dev
    secretName: media-dev-tls
  rules:
    - host: radarr.charana.dev
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: radarr
              port:
                number: 7878
    - host: prowlarr.charana.dev
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prowlarr
              port:
                number: 9696
    - host: torrent.charana.dev
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: qbittorrent
              port:
                number: 8080
    - host: sonarr.charana.dev
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sonarr
              port:
                number: 8989
